@@ -9,6 +9,7 @@ Version 1.6.0-dev (development of upcoming release)
 * Fix: Crash (KeyError) opening language setup dialog with unknown locale/language
 * Changed: Completed license information to conform the REUSE.software and SPDX standards.
 * Breaking Change: Auto-remove rules "Free inodes" and "Free space" disabled by default (#1976)
+* Feature: Toolbar context menu to display the buttons in different combinations with icons and text (#1105) (@mooresamuel)
 
 Version 1.5.3 (2024-11-13)
 * Doc: User manual (build with MkDocs) (#1838) (Kosta Vukicevic @stcksmsh)
